# DataSphere

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  MIGRATIONS.md  README.md  config.toml
crates/datasphere-api/: Cargo.toml
crates/datasphere-api/src/: config.rs  main.rs  response.rs  state.rs
crates/datasphere-api/src/routes/: concept.rs  fund.rs  health.rs  kline.rs  mod.rs  stock.rs  task.rs
crates/datasphere-core/: Cargo.toml
crates/datasphere-core/src/: error.rs  lib.rs
crates/datasphere-core/src/datasource/: mock.rs  mod.rs  registry.rs
crates/datasphere-core/src/domain/: concept.rs  data_type.rs  fetch.rs  fund.rs  fund_holding.rs  kline.rs  mod.rs  stock.rs  task.rs
crates/datasphere-entity/: Cargo.toml
crates/datasphere-entity/src/: concept.rs  fund.rs  fund_holding.rs  kline.rs  lib.rs  stock.rs  stock_concept.rs  task.rs  task_run.rs
crates/datasphere-scheduler/: Cargo.toml
crates/datasphere-scheduler/src/: lib.rs  scheduler.rs
crates/datasphere-service/: Cargo.toml
crates/datasphere-service/src/: concept_service.rs  fund_holding_service.rs  fund_service.rs  kline_service.rs  lib.rs  runner.rs  stock_service.rs  task_service.rs
crates/datasphere-service/src/collector/: concept.rs  fund_holding.rs  fund_list.rs  industry.rs  kline.rs  mod.rs  stock_list.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: Concepts.tsx  FundDetail.tsx  Funds.tsx  Klines.tsx  Stocks.tsx  TaskRuns.tsx  Tasks.tsx
migrations/: 002_add_run_stats.sql  003_add_progress_cancel.sql  004_add_funds.sql  20260628000001_init.sql  20260629000001_add_fund_holdings.sql  20260629000006_add_industry_concepts.sql
