[workspace]
members = [
    "crates/datasphere-core",
    "crates/datasphere-entity",
    "crates/datasphere-service",
    "crates/datasphere-scheduler",
    "crates/datasphere-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Web framework
rocket = { version = "0.5", features = ["json"] }

# ORM (2.0 RC，用户指定)
sea-orm = { version = "2.0.0-rc.40", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }

# Scheduler
tokio-cron-scheduler = "0.13"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"

# Internal crates
datasphere-core = { path = "crates/datasphere-core" }
datasphere-entity = { path = "crates/datasphere-entity" }
datasphere-service = { path = "crates/datasphere-service" }
datasphere-scheduler = { path = "crates/datasphere-scheduler" }

[profile.release]
opt-level = 3
lto = "thin"
