[package]
name = "datasphere-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
datasphere-core = { workspace = true }
datasphere-entity = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
